prevent responsive sticky from making another device column from stretch

--- a/src/blocks/column/styles/style.scss
+++ b/src/blocks/column/styles/style.scss
@@ -20,7 +20,7 @@
     }
   }
 
-  &.sticky-bottom, &.sticky-top {
+  &.sticky-bottom.sticky-desktop, &.sticky-top.sticky-desktop {
     height: fit-content;
   }
 
@@ -165,6 +165,10 @@
     &.horizontal-evenly-tablet {
       justify-content: space-evenly;
     }
+
+    &.sticky-bottom.sticky-tablet, &.sticky-top.sticky-tablet {
+      height: fit-content;
+    }
   }
 
   @media only screen and (max-width: 425px) {
@@ -217,6 +221,10 @@
 
     &.horizontal-evenly-mobile {
       justify-content: space-evenly;
+    }
+
+    &.sticky-bottom.sticky-mobile, &.sticky-top.sticky-mobile {
+      height: fit-content;
     }
   }
 }
